# Conversations_in_Elevators

./: CMakeLists.txt  People.txt  README.md
src/: Answer.cpp  Answer.h  Building.cpp  Building.h  Constants.h  Conversation.cpp  Conversation.h  Dialog.cpp  Dialog.h  Elevator.cpp  Elevator.h  ElevatorButton.h  Floor.cpp  Floor.h  MessageQueue.cpp  MessageQueue.h  Person.cpp  Person.h  Question.cpp  Question.h  Space.cpp  Space.h  main.cpp
